@@ -6,15 +6,17 @@ AUX filezilla-3.7.4-debug.patch 404 SHA256 11ff65c718b4dce0b80a8263a7342d7ff2956
 DIST FileZilla_3.7.3_src.tar.bz2 3682494 SHA256 2b012970a6033d8ffd4629b1d57b50ace62cd3750efad70001109f25e520c042 SHA512 b20ec013110e643dd0afca960b4577dd4f17ae744caf63be64e0c8435b8812064aebb4167d0efb186ba171b26967bbc61b6b22a8866b2460530f5793d7d5ecfb WHIRLPOOL acfceb3976f53abcce8da25ea1358761ee6e1a5f556e335067ed665b710fb4a873cce4f62916a19ec784a542db367bed9380a17df37c6ae200fa52e5cd7cc910
 DIST FileZilla_3.7.4.1_src.tar.bz2 3709078 SHA256 8be46f472c12d412c58b5a0b1be751c64bc5e7fceaa6b9170f8edbc7dbfa64a9 SHA512 6b957589eb275dce017450a629f08199abafe1e7a80c7d1fed34eba929fd5dd34883eb4fc756c448ba0ff41f65147872c5df5e27e3743c1759927756176743be WHIRLPOOL 30834ddd3ebb013551200852dcc106a2cd893ffa87d53378a0d83a9c5b928b12711319beeae2c884963e6721f06d463da42d0d98c6dbeff239027d08d3e182e4
 DIST FileZilla_3.7.4_src.tar.bz2 3707985 SHA256 20a6d5ce737a8cbb38786b53365547e5e71dd9086259bf0b4eb264e8dbbc11ce SHA512 22c92d7b154f265d08c840d5107f596e8398a7ae91e99615bc278eeaf69e70b653906e80be6cddf3125946765c3934e1b86212f6ae76925c8967e7032508aa2f WHIRLPOOL 12db80b9d651e84426c1359f31e0ee53b37e545f393bfddc234863d762e5d48f2d5ac973b14c06f078947eb66e8ebda8462cecf760dbdc35370705580903d461
+DIST FileZilla_3.8.0_src.tar.bz2 3749995 SHA256 8d9c1c9812f916f83676e1930933683828579b40a9fba331c4757f84a02ec308 SHA512 f30ba186de612bf0b3b80c90cee5ff155b6fb2d6f892b5981c5d1436c8b6381194ffea6f079b6afd292e7540bfb357a474eeed89907da739a737ef0095eabea0 WHIRLPOOL 52f041432b229dd907a17bf190cc5a3c2bec545ab78440d6c88809b2aeded23bfe7e4db01dcaad545041fe6fa36ede8dd60594f903279acc4ea53f94be7fb778
 EBUILD filezilla-3.7.3.ebuild 1717 SHA256 b025df49825eb732896b5523bbf80f84662cbdd6687c4a10e2e1a1107dfcf7b3 SHA512 3d631d88e81d2d4029238ec2ef41326df3d2db6143f177e839a02da5efab9ece9015135ff129a3dcfbe300e276d143431cae0c8438ea9c864fc7c866c841978a WHIRLPOOL 4fe6afe4a0659735101884d8ed4039ff91b4b04a118947eefad11b568d494ac0e42464241b4bc16b8064e90bbd738d56776f739eb67a4f50ed77b022f2c86e28
 EBUILD filezilla-3.7.4.1.ebuild 1722 SHA256 c1ae5cb5bc1097d447f664048d452a23a1177909237676d5cdb61fe81b21650f SHA512 162ceb9e6266bf33c9fe93eb7d5fd50ec19c77e2c214059fc36aa7cdfa0349dd04ae187311b17e7c8faeda4baffb208c3eb600e134f36139335086b98d0c5947 WHIRLPOOL 5e7438b19696cd8050c2931d0573b11007d7b7256d0cd4d0e4471b8817196f8bc5aec6fa9c0d3f3fe764dddf4355263a545a9faaa5e0a0813767e6adf5aa0e76
 EBUILD filezilla-3.7.4.ebuild 1720 SHA256 f63908c87aef1e77904f401438f782b9a459d3e26466e9e830819ba7c7d5e4fc SHA512 c893d10262adf1f704b92c4a3a0f9452215a8b94c69a113e6ea00cec15936632404b9b68612883ba88b3bcc2c9263ea10aca6be5bdee9f3f32e98dbac8eebae5 WHIRLPOOL c0e0c8a67d0865b85504ec3cea43c6116aeef9756bfb3f8c6cdf6be67d254e9e5865e534919dfc8628836e21d5d60382560f3a678d2076382e30f1c332385ecc
-MISC ChangeLog 20032 SHA256 dd14b89c73afa05933f9d47ad23f716696ade4d628bdb63661fc42a9867aba31 SHA512 19cba3c2e32312ff16a9802b2b6422b08c29a366588d07da37dbda48f28a8bcbeac78011601c12a85617735cfc22fdc85060ba1a6db071a4f09d5634de1c1b71 WHIRLPOOL 63f623e6c38d99520a7d6d6584d14ec482541aea1977bcca08b83c534df26738713baf3efaf7bf9061dd1c00278da29711b293afcab5247539ea59ac335497aa
+EBUILD filezilla-3.8.0.ebuild 1720 SHA256 a79cff5f56b4c8b80d113eddfc1b4f201c8c74f98dd8826e3771e52fdeee9e21 SHA512 0b102606946e1da779b7a467d26ae0d585f9bf90283a73dc9d625a426409a6f531413e831817a259ced93d602fe1a4ce3b6ea3557e81847335aeb534009dcc10 WHIRLPOOL f76f95e816bc21e3104a7e57e0d85bf693cca60770bb1cda76499188e6cbc825976bf2ccf3dc6fe236439f212ea327d586fe623c9a745c3f09c4561ddb624a7c
+MISC ChangeLog 20160 SHA256 70fcd4cae380097796e9db3d43465974f35ec4a04e0797e9c7dcbc034fc49bb6 SHA512 8b7027fff88752e624ab3554fe10ea579b824ed9f2e95c1d78e584c082667439bb2ae68b69e1c6dddf61c9f6462bdec926e4f0e90f4db85aa61fffca35dba86d WHIRLPOOL 3cca18bcddf21d18c7a4be68e71fb6d9b3fad242dc5de2ca5bfd01fcc4cdf924aae7bf6e3a8b54e8dfd7c50bc1a70e82513b4fe0c29ccb94cd0bce55e6f74765
 MISC metadata.xml 358 SHA256 13ba819a417c003a969b6557fd32a73ed49be658c3e0470c29a21ee807d5a28b SHA512 8008462bcccc0b22ea71170427d3318b3f403ad324bd3d2207b35b2344a5822b2b1c82c7cb379b99a08707853477a0887c65684c0b5de93b6782ae863569c373 WHIRLPOOL 5dac2fceebc89a40318fbc2ef5c3501c7726228afe431b455d6e6d485b9f3d51f2f8496abe91d2364733b82372a68e678d23e319ba7986830448ce7bd3e9cbbe
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlL7OJsACgkQFYEBGcdFJfIOLwD/apLU3UN31tzHGAKKumdAj7rv
-Twbixu9KjlY6cZD078EA/1BnROo1SrGUv2vUdjfY7QQxq/2V+cQfYk0QlKqRzteT
-=18HP
+iF4EAREIAAYFAlM1qPkACgkQFYEBGcdFJfJ9IwD/YC08KgWBcbamYe6WigeoRRFV
+wVxIotSsOR6Ctl137CoBAJV4IZOMwXhDkBdlMTTTdqcdl6+BwehvVpROoIc9Wdya
+=oVYl
 -----END PGP SIGNATURE-----
