@@ -1,6 +1,11 @@
 # ChangeLog for net-ftp/filezilla
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/filezilla/ChangeLog,v 1.114 2014/02/12 09:02:12 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/filezilla/ChangeLog,v 1.115 2014/03/28 16:53:05 voyageur Exp $
+
+*filezilla-3.8.0 (28 Mar 2014)
+
+  28 Mar 2014; Bernard Cafarelli <voyageur@gentoo.org> +filezilla-3.8.0.ebuild:
+  Version bump
 
 *filezilla-3.7.4.1 (12 Feb 2014)
 
